Fix alignment of gallery images

--- a/themes/hugo-bricks/static/css/style.css
+++ b/themes/hugo-bricks/static/css/style.css
@@ -72,6 +72,7 @@ main {
 .photos {
   display: flex;
   flex-wrap: wrap;
+  align-items: baseline;
 }
 
 .photos .photo {
